crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__regression__394.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/regression/394.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (block
      (class A (local @3) ∅)
      (class B (local @4) (local A @3))
      (print (local B @4))))

----- stderr -----
