crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__regression__40.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/regression/40.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun caller (global @3) [(local g @0)] []
      (block
         (expr (call +1 (local g @0)))
         (print (== (local g @0) nil))))
   (fun callCaller (global @4) [] [None]
      (block
         (var capturedVar (cell @0) "before")
         (var a (local @0) "a")
         (fun f (local @1) [] [Some(0)]
            (block
               (expr (= (cell capturedVar @0) "after"))))
         (expr (call +2 (global caller @3) (local f @1)))))
   (expr (call +5 (global callCaller @4))))

----- stderr -----
